# Technical_Project_RL

./: README.md
airport_baggage_system/: CMakeLists.txt  package.xml
airport_baggage_system/launch/: iiwa.launch.py
airport_baggage_system/maps/: airport_map.pgm  airport_map.yaml
airport_baggage_system/models/aruco_tag/: model.config  model.sdf
airport_baggage_system/scripts/: color_detector.py
airport_baggage_system/src/: fra2mo_manager.cpp  iiwa_manager.cpp
airport_baggage_system/worlds/: airport_new.world
ros2_fra2mo/config/: explore.yaml  navigation.yaml  slam.yaml
ros2_fra2mo/launch/: fra2mo_explore.launch.py  fra2mo_navigation.launch.py
ros2_fra2mo/maps/: map.yaml
ros2_fra2mo/urdf/: camera_macro.xacro  d435_gazebo_macro.xacro  fra2mo.urdf.xacro  lidar_gazebo_macro.xacro
ros2_iiwa/iiwa_description/config/: base_frame.yaml  iiwa.config.xacro  iiwa_controllers.yaml
ros2_iiwa/iiwa_description/gazebo/: iiwa.gazebo.xacro
ros2_iiwa/iiwa_description/gazebo/models/aruco_tag/: model.config  model.sdf
ros2_iiwa/iiwa_description/gazebo/worlds/: aruco.world
ros2_iiwa/iiwa_description/urdf/: camera.xacro  iiwa.urdf.xacro
ros2_kdl_package/: CMakeLists.txt  package.xml
ros2_kdl_package/action/: MoveArm.action
ros2_kdl_package/config/: param.yaml
ros2_kdl_package/include/: kdl_control.h
ros2_kdl_package/launch/: gaz.launch.py  kdl_action.launch.py  kdl_node.launch.py
ros2_kdl_package/src/: action_client_node.cpp  action_server_node.cpp  kdl_control.cpp  ros2_kdl_node.cpp  ros2_vision_control_node.cpp
